# vmap_for_batch_norm

./: README.md  batch_norm.py  batch_norm_minus.py  pyproject.toml
scripts/: main.py
src/batch_norm/: __init__.py  bn.py
src/batch_norm_vanilla/: __init__.py  bn.py
src/common/: __init__.py  common.py  datasets.py
